# mcp-gateway

./: Cargo.toml
.github/workflows/: deploy.yml
scripts/: install.sh
src/: main.rs
tests/: integration_test.rs
