[package]
name = "mcp-gateway"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.24", features = ["derive", "env"] }
futures = "0.3"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
