[package]
name = "mcp-gateway"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.24", features = ["derive", "env"] }
futures = "0.3"
http-client = { git = "https://github.com/fdionisi/http-client", version = "0.3" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.3" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
