[package]
name = "mcp-gateway"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
http-client = { git = "https://github.com/fdionisi/http-client", version = "0.4" }
http-client-reqwest = { git = "https://github.com/fdionisi/http-client", version = "0.3" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["cors"] }
serde_json = "1"
chrono = "0.4"
